# EvolvReaper

./: README.md  evolvreaper.md  pyproject.toml  replit.md  structure.md  style.yml
backend/: app.py  db.py  domains.db  requirements.txt
backend/modules/: certscan.py  classifier.py  commoncrawl.py  opencorporates.py  validator.py
backend/output/: domains.txt
backend/utils/: export_csv.py  export_json.py  export_md.py  export_txt.py
frontend/: index.html  script.js  styles.css
